feat: add class recent-posts

--- a/style/fonts.less
+++ b/style/fonts.less
@@ -30,7 +30,7 @@
 
 @primary-text-color: #21243D;
 
-:root {
+html, h2, h1, h3 {
   font-size: calc(0.5em + 0.71vw); //width 1152px - font-syze 16px
   font-family: @font-family;
   color: @primary-text-color;
