--- a/style/index.less
+++ b/style/index.less
@@ -163,7 +163,6 @@
     align-items: center;
   }
   .recent-posts__post {
-    //margin-left: 0;
     &:nth-child(2n + 2) {
       margin-left: 0;
     }
@@ -172,7 +171,7 @@
 
 .post__name {
   font-weight: 700;
-  font-size: 1.625em; //26px
+  font-size: 1.625rem; //26px
   margin-bottom: 1.538em;
   line-height: 1.461em;
 }
@@ -194,5 +193,66 @@
 }
 
 .post__text {
+  line-height: 1.5em;
+}
+
+//------------------------------------------------
+//Featured works
+
+.featured-works {
+  padding-top: 2.375em;
+}
+
+.featured-works__tytle {
+  font-size: 1.375rem; // 22px
+  line-height: 1.375em; //2.72em
+  margin-bottom: 1.818em;
+  //font-weight: normal;
+}
+
+.featured-works__item {
+  display: flex;
+  align-items: center;
+   &:nth-child(n+2) {
+    margin-top: 1.937em;
+  }
+}
+
+.eatured-works__item__img {
+  width: 15.375em;
+  height: 11.25em;
+  object-fit: cover;
+  margin-right: 1.125em;
+  border-radius: 0.375em;
+}
+
+.featured-works__item__about__tytle {
+  font-weight: 700;
+  font-size: 1.875rem; //30px
+  line-height: 1em;
+  margin-bottom: 1em;
+}
+
+.featured-works__item__about__info {
+  display: flex;
+  margin-bottom: 1em;
+}
+
+.featured-works__item__about__info__date {
+  background-color: #142850;
+  border-radius: 0.888em;
+  margin-right: 1.666em;
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 1.125rem; // 18px
+  padding: 0 0.9em;
+}
+
+.featured-works__item__about__info__tags {
+  font-size: 1.25rem; //20px
+  color: #8695A4;
+}
+
+.featured-works__item__about__text {
   line-height: 1.5em;
 }
