--- a/style/index.less
+++ b/style/index.less
@@ -213,8 +213,10 @@
 .featured-works__item {
   display: flex;
   align-items: center;
-   &:nth-child(n+2) {
-    margin-top: 1.937em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #e0e0e0;
+  &:nth-child(n + 2) {
+    margin-top: 1em;
   }
 }
 
@@ -250,9 +252,55 @@
 
 .featured-works__item__about__info__tags {
   font-size: 1.25rem; //20px
-  color: #8695A4;
+  color: #8695a4;
 }
 
 .featured-works__item__about__text {
   line-height: 1.5em;
+}
+
+//-------------------------------------------------
+// footer
+
+footer {
+  margin-top: 5.437em;
+  padding: 3.187em 2em;
+  display: flex;
+  justify-content: center;
+}
+
+.subscription-panel {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.625em;
+  list-style: none;
+}
+
+.subscription-panel__item a {
+  &::before {
+    content: '';
+    display: block;
+    width: 2em;
+    height: 2em;
+    border-radius: 0.3em;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+}
+
+.subscription-panel__item__facebook::before {
+  background-image: url('../image/icons8-facebook-50.png');
+}
+
+.subscription-panel__item__instagram::before {
+  background-image: url('../image/icons8-instagram-50.png');
+}
+
+.subscription-panel__item__twitter::before {
+  background-image: url('../image/icons8-twitter-60.png');
+}
+
+.subscription-panel__item__linkedin::before {
+  background-image: url('../image/icons8-linkedin-50.png');
 }
