--- a/style/index.less
+++ b/style/index.less
@@ -4,9 +4,6 @@
 @padding-L-R-max: 9em;
 @padding-L-R-min: 2em;
 
-//-----------------------------------------
-// header
-
 .super-container {
   overflow-x: hidden;
   width: 100%;
@@ -14,7 +11,7 @@
   border: 1px solid black;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 43.75rem) {
   .super-container {
     padding: 1.8em @padding-L-R-min;
   }
@@ -22,6 +19,9 @@
     left: -@padding-L-R-min !important;
   }
 }
+
+//-----------------------------------------
+// header
 
 .header {
   margin-bottom: 9.1em;
@@ -50,6 +50,39 @@
 
 //---------------------------------------
 // about-my-work
+
+@media (max-width: 31.25rem) {
+  .about-my-work {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about-my-work .about-my-work__info {
+    width: 100%;
+    order: 2;
+  }
+  .about-my-work .about-my-work__photo {
+    width: 100%;
+    padding-left: 0;
+    display: block;
+    margin-bottom: 2em;
+    order: 1;
+  }
+
+  .about-my-work__photo .about-my-work__photo__img {
+    margin: 0 auto;
+    display: block;
+  }
+
+  .about-my-work__header,
+  .about-my-work__text {
+    text-align: center;
+  }
+  .about-my-work__download-resume {
+    display: block;
+    margin: 0 auto;
+  }
+}
 
 .about-my-work {
   display: flex;
@@ -105,6 +138,16 @@
 //-----------------------------------------------
 //recent-posts
 
+@media (max-width: 31.25rem) {
+  .recent-posts__header__all-posts {
+    display: none;
+  }
+  .recent-posts__header__tytle {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 .recent-posts {
   padding: 2em 0;
   position: relative;
@@ -155,7 +198,7 @@
   }
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 75rem) {
   .recent-posts__posts-wrapper {
     flex-direction: column;
     flex-wrap: nowrap;
@@ -199,6 +242,31 @@
 //------------------------------------------------
 //Featured works
 
+@media (max-width: 31.25rem) {
+  .featured-works {
+display: flex;
+flex-direction: column;
+align-items: center;
+  }
+
+.featured-works__tytle {
+  display: block;
+}
+
+.featured-works__item {
+  flex-direction: column;
+  .eatured-works__item__img {
+  width: 100%;
+  height: auto;
+  margin-right: 0;
+  margin-bottom: 1em;
+}
+}
+
+
+
+}
+
 .featured-works {
   padding-top: 2.375em;
 }
@@ -207,7 +275,6 @@
   font-size: 1.375rem; // 22px
   line-height: 1.375em; //2.72em
   margin-bottom: 1.818em;
-  //font-weight: normal;
 }
 
 .featured-works__item {
