--- a/style/burger-menu.less
+++ b/style/burger-menu.less
@@ -1,10 +1,5 @@
 @import './fonts.less';
 
-.main-longer {
-  margin-top: 12em;
-  transition: margin-top 400ms;
-}
-
 @media (max-width: 31.25rem) {
   .header__nav__gamburger-container {
     cursor: pointer;
@@ -38,146 +33,10 @@
       top: 10px;
     }
   }
-
-  .header__nav__list .header__nav__item a {
-    color: white;
-  }
-
-  .header__nav__item {
-    text-align: center;
-    font-size: 0;
-    transition: font-size 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  }
-
-  .header__nav__list .header__nav__item:nth-child(n + 2) {
-    margin-left: 0;
-  }
-
-  .super-container .header__nav .header__nav__list{
-    top: 100%;
-    width: 100%;
-    background-color: @primary-text-color;
-  }
-  
 }
 
-.header__nav__item-visible {
-  padding: 1em 0;
-  font-size: 1rem;
-  transition: font-size 400ms cubic-bezier(0.23, 1, 0.32, 1);
+@media (min-width: 31.26rem) {
+  .header__nav__gamburger {
+    display: none;
+  }
 }
-
-// .super-container .header__nav .menu-visible {
-//   top: 100%;
-//   width: 100%;
-//   background-color: @primary-text-color;
-// }
-
-// @media (min-width: 31.26rem) {
-//   #menu-toggle,
-//   .menu-button-container {
-//     display: none;
-//   }
-// }
-
-// @media (max-width: 31.25rem) {
-//   #menu-toggle {
-//     display: none;
-//   }
-//   .menu .header__nav__item:nth-child(n + 2) {
-//     margin-left: 0;
-//   }
-//   .menu-button-container {
-//     display: flex;
-//     height: 100%;
-//     width: 30px;
-//     cursor: pointer;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-//   }
-//   nav {
-//     height: 20px;
-//   }
-//   .menu-button {
-//     right: 2em;
-//   }
-
-//   .menu-button,
-//   .menu-button::before,
-//   .menu-button::after {
-//     display: block;
-//     background-color: @primary-text-color;
-//     position: absolute;
-//     height: 4px;
-//     width: 30px;
-//     transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-//     border-radius: 2px;
-//   }
-
-//   .menu-button::before {
-//     content: '';
-//     margin-top: -8px;
-//   }
-
-//   .menu-button::after {
-//     content: '';
-//     margin-top: 8px;
-//   }
-
-//   #menu-toggle:checked + .menu-button-container .menu-button::before {
-//     margin-top: 0px;
-//     transform: rotate(405deg);
-//   }
-
-//   #menu-toggle:checked + .menu-button-container .menu-button {
-//     background: rgba(255, 255, 255, 0);
-//   }
-
-//   #menu-toggle:checked + .menu-button-container .menu-button::after {
-//     margin-top: 0px;
-//     transform: rotate(-405deg);
-//   }
-
-//   .menu {
-//     position: absolute;
-//     top: 0;
-//     margin-top: 50px;
-//     left: 0;
-//     flex-direction: column;
-//     width: 100%;
-//     justify-content: center;
-//     align-items: center;
-//   }
-
-//   #menu-toggle ~ .menu li a{
-//     height: 0;
-//     margin: 0;
-//     padding: 0;
-//     border: 0;
-//     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-//   }
-//   #menu-toggle:checked ~ .menu li a{
-//     border: 1px solid #333;
-//     height: 2.5em;
-//     padding: 0.5em;
-//     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-//   }
-
-//   .menu > li {
-//     width: 100%;
-//   }
-
-//   .menu > li a{
-//     display: flex;
-//     justify-content: center;
-//     margin: 0;
-//     padding: 0.5em 0;
-//     width: 100%;
-//     color: white;
-//     background-color: #222;
-//   }
-//   .menu > li a:not(:last-child) {
-//     border-bottom: 1px solid #444;
-//   }
-// }
