--- a/style/index.less
+++ b/style/index.less
@@ -1,11 +1,7 @@
 @import './fonts.less';
-@import '/style/default-styles.less';
+@import './default-styles.less';
 @import './header.less';
 @import './footer.less';
-
-@padding-L-R-max: 9rem;
-@padding-L-R-min: 2rem;
-@super-container-color: #fff;
 
 .super-container {
   overflow-x: hidden;
@@ -27,10 +23,6 @@
 main {
   margin-top: 7em;
   transition: margin-top 400ms;
-}
-
-.main-longer {
-  margin-top: 16em;
 }
 
 //---------------------------------------
