--- a/style/header.less
+++ b/style/header.less
@@ -61,6 +61,9 @@
 .header__nav__item a {
   text-decoration: none;
   color: @primary-text-color;
+  display: block;
+  height: 100%;
+  margin: 1em 0;
 }
 
 .header__nav__item:nth-child(n + 2) {
@@ -68,7 +71,6 @@
 }
 
 .header__nav__item-visible {
-  padding: 1em 0;
   font-size: 1.25rem;
   transition: font-size 400ms cubic-bezier(0.23, 1, 0.32, 1);
 }
