--- a/style/works.less
+++ b/style/works.less
@@ -2,3 +2,54 @@
 @import './default-styles.less';
 @import './header.less';
 @import './footer.less';
+
+h1 {
+  font-weight: 900;
+  font-size: 2.75rem; // 44px
+  margin-bottom: 1.136em;
+}
+
+.work-item {
+  display: flex;
+  align-items: center;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #e0e0e0;
+  margin-bottom: 2.562em;
+}
+
+.work-item__photo {
+  border-radius: 0.375em;
+  margin-right: 1.125em;
+  width: 15.375em;
+  height: 11.25em;
+  object-fit: cover;
+}
+
+.work-item__tytle {
+  font-weight: 700;
+  font-size: 1.875rem; // 30px
+  margin-bottom: 1em;
+}
+
+.work-item__about-work {
+  display: flex;
+  margin-bottom: 1.312em;
+}
+.work-item__about-post__date {
+  background-color: #142850;
+  border-radius: 0.888em;
+  margin-right: 1.666em;
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 1.125rem; // 18px
+  padding: 0 0.9em;
+}
+
+.work-item__about-post__tags {
+  font-size: 1.25rem; //20px
+  color: #8695a4;
+}
+
+.work-item__text {
+  line-height: 1.625em;
+}
