--- a/style/header.less
+++ b/style/header.less
@@ -21,6 +21,11 @@
     color: white;
   }
 
+  .header__nav__item a {
+    padding: 1em 0;
+    display: block;
+  }
+
   .header__nav__list .header__nav__item:nth-child(n + 2) {
     margin-left: 0;
   }
@@ -61,9 +66,10 @@
 .header__nav__item a {
   text-decoration: none;
   color: @primary-text-color;
-  display: block;
-  height: 100%;
-  margin: 1em 0;
+}
+
+.header__nav__list .header__nav__item .header__nav__item-active {
+  color: #ff6464;
 }
 
 .header__nav__item:nth-child(n + 2) {
@@ -73,4 +79,5 @@
 .header__nav__item-visible {
   font-size: 1.25rem;
   transition: font-size 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-bottom: 0.1px solid black;
 }
