--- a/style/works.less
+++ b/style/works.less
@@ -53,3 +53,26 @@ h1 {
 .work-item__text {
   line-height: 1.625em;
 }
+
+
+@media (max-width: 31.25rem) {
+    .works-list {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .work-item__tytle {
+      display: block;
+    }
+
+    .work-item {
+        flex-direction: column;
+        .work-item__photo {
+          width: 100%;
+          height: auto;
+          margin-right: 0;
+          margin-bottom: 1em;
+        }
+      }
+}
