fix: поправил ссылку на import внутри blog.less

--- a/style/blog.less
+++ b/style/blog.less
@@ -1,5 +1,5 @@
 @import './fonts.less';
-@import '/style/default-styles.less';
+@import './default-styles.less';
 @import './header.less';
 @import './footer.less';
 
